[update] api search product by keyword